<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"/>

        <item android:id="@+id/nav_event"
              android:icon="@drawable/ic_event"
              android:title="@string/event"/>

        <item android:id="@+id/nav_headset"
              android:icon="@drawable/ic_headset"
              android:title="@string/headset"/>

        <item android:id="@+id/nav_forum"
              android:icon="@drawable/ic_forum"
              android:title="@string/forum"/>
    </group>

    <item android:title="@string/others">
        <menu>
            <item android:id="@+id/nav_settings"
                  android:icon="@drawable/ic_dashboard"
                  android:title="@string/settings"/>

            <item android:id="@+id/nav_about_us"
                  android:icon="@drawable/ic_dashboard"
                  android:title="@string/about_us"/>
        </menu>
    </item>
</menu>